Updating About Me

--- a/about.html
+++ b/about.html
@@ -33,20 +33,29 @@
             <section class="introduction-section">
             <div class ="holder">
             </div>
-              <div class="container">
-              <h1><span class ="highlight">Hi there!</span></h1> <br>
-              <p>My name is <span class = "highlight"><a href = "https://www.linkedin.com/in/david-j-yoon/" target = "_blank">David</a></span>! I am an inherent problem solver. Although my background is in Computer Science, my curiosity often lets me wander into various domains, which has allowed me to appreciate the value of different experiences. 
-                  I have particularly sharpened my eyes towards design thinking, recommender systems, and engineering ethics over the past few years. 
-              </p>
-              <br>
-              <p>I'm a recent graduate from the <span class = "highlight"><a href = "https://www.virginia.edu/">University of Virginia</a></span> currently working at <span class = "highlight"><a href ="https://www.appian.com/">Appian</a></span> as a Software Engineer. 
-                In the past, I've interned at <span class = "highlight"><a href ="https://www.relativity.com/">Relativity</a></span> and <span class = "highlight"><a href ="https://www.alarm.com/">Alarm.com</a></span>, where I've had opportunities to work with the full stack.
-              </p>
-              <br>
-              <p>When I'm not coding, you can find me training for a marathon, curating my Spotify <span class = "highlight"><a href = "https://open.spotify.com/user/22yrmdeyt64fpwnaef2dyizcy?si=apahZWoURnSGao8aBIaYMQ">playlists</a></span>, and cheering on <span class = "highlight"><a href = "https://www.tottenhamhotspur.com/">Tottenham Hotspur</a></span>.</p>
-              <br>
-              <p>I'm actively looking for new opportunities in the engineering domain. If you want to learn more, feel free to check out my <span class = "highlight"><a target = "_blank" href="David Yoon Resume.pdf">resume</a></span> or <span class = "highlight"><a href ="mailto: djy6cg@virginia.edu" target="_blank">reach out!</a></span> </p>
+              <div class="img-container">
+                <img class="profile-image big rounded" src="images/image.JPG" alt="second pic">
               </div>
+              <div class="container">
+                <span class ="highlight"><h1>Who Am I</h1></span> <br>
+              <p>👋 Hi I'm David! I'm a Software Engineer creating cool impactful stuff for <span class = "highlight appian"><a href ="https://www.appian.com/">Appian</a></span>.
+              </p>
+              <br>
+              <p>🎓 I'm a recent graduate from the <span class = "highlight"><a href = "https://www.virginia.edu/">University of Virginia</a></span>, where I studied Computer Science, taught chess, and helped organize TEDx talks.
+              </p>
+              <br>
+              <p>💼 In the past, I've interned at <span class = "highlight relativity"><a href ="https://www.relativity.com/">Relativity</a></span> and <span class = "highlight alarm"><a href ="https://www.alarm.com/">Alarm.com</a></span>, where I've had opportunities to work with the full stack.</p>
+              <br>
+              <span class ="highlight"><h1>Fun Facts</h1></span> <br>
+              <p>⚽ Played soccer since I was 5. Currently playing "Sunday Leagues" with local friends</p>
+              <br>
+              <p>🌎 Recent Visits: Boston, Chicago, Iceland, NYC, Austin, Philly</p>  
+              <br>
+              <p>☕ Addicted to making good coffee and going to coffee shops</p>
+              <br>
+              <p>📺 Current Watchlist: Peaky Blinders, Better Call Saul, Silicon Valley</p>
+              <br>
+            </div>
             </section>
           
             <footer class="content-footer">
