--- a/home.html
+++ b/home.html
@@ -18,6 +18,7 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
     <body>
+    </main> 
         <header>
             <div class="logos">
                 <h3><a href="home.html">dy.</a></h3>
@@ -59,7 +60,6 @@
                 <div class="footer-container">
                   <p>&copy; 2020 <a href="https://davidjyoon.me">David Yoon</a>. Thanks for visiting!</p>
                 </div>
-            </footer>fa 
-        </main> 
+            </footer>
     </body>
 </html>
