update about me

--- a/about.html
+++ b/about.html
@@ -47,7 +47,7 @@
               <p>💼 In the past, I've interned at <span class = "highlight relativity"><a href ="https://www.relativity.com/">Relativity</a></span> and <span class = "highlight alarm"><a href ="https://www.alarm.com/">Alarm.com</a></span>, where I've had opportunities to work with the full stack.</p>
               <br>
               <span class ="highlight"><h1>Fun Facts</h1></span> <br>
-              <p>⚽ Playing soccer since I was 5. Currently playing "sunday league" with friends</p>
+              <p>⚽ Playing soccer since I was 5. Currently playing co-ed and men's "sunday league" with friends</p>
               <br>
               <p>🌎 Recent Visits: Boston, Chicago, Iceland, NYC, Austin, Philly</p>  
               <br>
