Hidden fitnes page

--- a/about.html
+++ b/about.html
@@ -49,11 +49,11 @@
               <span class ="highlight"><h1>Fun Facts</h1></span> <br>
               <p>⚽ Playing soccer since I was 5. Currently playing co-ed and men's "sunday league" with friends</p>
               <br>
-              <p>🌎 Recent Visits: Boston, Chicago, Iceland, NYC, Austin, Philly</p>  
+              <p>🌎 Recent Visits: San Diego, Boston, Chicago, Iceland</p>  
               <br>
               <p>☕ Addicted to making good coffee and going to coffee shops</p>
               <br>
-              <p>📺 Current Watchlist: Peaky Blinders, Better Call Saul, Silicon Valley</p>
+              <p>📺 Current Watchlist: Peaky Blinders, Barry, Mad Men</p>
               <br>
             </div>
             </section>
