Updating Fitness Page

--- a/fitness.html
+++ b/fitness.html
@@ -34,7 +34,7 @@
               <div class="container">
                 <span class ="highlight"><h1>Running Journal</h1></span> <br>
               <p>Because of my background in soccer, I've always been interested in distance running. Over the past 
-                few years, I've started to run more actively and race. To date, I have ran in 2 half marathons and plan 
+                few years, I've started to run more actively and race. To date, I have ran in 3 half marathons and plan 
                 to run 2 marathons in 2023. This sounds corny, but ever since I watched the Facebook movie,
                 I've always loved the idea of "journaling" on a webpage. Thus, this is more of an active journal for me to 
                 document my journey (:
@@ -44,19 +44,20 @@
                 <ul class = "no-bullets">
                   <li>- Chicago Half Marathon (2021): 1:52:20</li>
                   <li>- Georgetown Half Marathon (2022): 1:42:34</li>
+                  <li>- SpringField Half Marathon (2023): 1:41:56</li>
                 </ul>
               </p>
               <p><b>Upcoming Races:</b>
               <ul class = "no-bullets">
-                <li>- Springfield Half Marathon (March 2023)</li>
                 <li>- Newport Beach Marathon (May 2023)</li>
-                <li>- Richmond Marathon (Nov 2023)</li>
+                <li>- DC Half Marathon (Sept. 2023)</li>
+                <li>- Richmond Marathon (Nov. 2023)</li>
               </ul>
               <br>
             </p>
             <p><b>Current Gear:</b>
             <ul class = "no-bullets">
-              <li>Shoes: Adidas SL20</li>
+              <li>Shoes: NB FuelCell Rebel V3, Brooks Ghost 14</li>
               <li>Watch: Garmin Forerunner 245</li>
             </ul>
             <br>
