Updating Fitness Page

--- a/fitness.html
+++ b/fitness.html
@@ -44,7 +44,7 @@
                 <ul class = "no-bullets">
                   <li>- Chicago Half Marathon (2021): 1:52:20</li>
                   <li>- Georgetown Half Marathon (2022): 1:42:34</li>
-                  <li>- SpringField Half Marathon (2023): 1:41:56</li>
+                  <li>- Springfield Half Marathon (2023): 1:41:56</li>
                 </ul>
               </p>
               <p><b>Upcoming Races:</b>
