Live Running Journal

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
                 <ul class = "nav-bar">
                     <li><a class = "myLinks" href="home.html">Home</a></li>
                     <li><a class = "myLinks" href="about.html">About Me</a></li>
+                    <li><a class = "myLinks" href="fitness.html">Running Journal</a></li>
                     <li><a class = "myLinks" target = "_blank" href="David Yoon Resume.pdf">Resume</a></li>
                 </ul>
             </nav>
