--- a/fitness.html
+++ b/fitness.html
@@ -25,6 +25,7 @@
                 <ul class = "nav-bar">
                     <li><a class = "myLinks" href="home.html">Home</a></li>
                     <li><a class = "myLinks" href="about.html">About Me</a></li>
+                    <li><a class = "myLinks" href="fitness.html">Running Journal</a></li>
                     <li><a class = "myLinks" target = "_blank" href="David Yoon Resume.pdf">Resume</a></li>
                 </ul>
             </nav>
@@ -34,8 +35,8 @@
               <div class="container">
                 <span class ="highlight"><h1>Running Journal</h1></span> <br>
               <p>Because of my background in soccer, I've always been interested in distance running. Over the past 
-                few years, I've started to run more actively and race. To date, I have ran in 3 half marathons and plan 
-                to run 2 marathons in 2023. This sounds corny, but ever since I watched the Facebook movie,
+                few years, I've started to run more actively and race. To date, I have ran in 1 full marathon and 3 half marathons. I plan 
+                to run another marathon in 2023. This is quite corny, but ever since I watched the Facebook movie,
                 I've always loved the idea of "journaling" on a webpage. Thus, this is more of an active journal for me to 
                 document my journey (:
               </p>
@@ -45,11 +46,12 @@
                   <li>- Chicago Half Marathon (2021): 1:52:20</li>
                   <li>- Georgetown Half Marathon (2022): 1:42:34</li>
                   <li>- Springfield Half Marathon (2023): 1:41:56</li>
+                  <li>- OC Marathon (May 2023): 3:48:01</li>
                 </ul>
               </p>
               <p><b>Upcoming Races:</b>
               <ul class = "no-bullets">
-                <li>- Newport Beach Marathon (May 2023)</li>
+                <li>- Summer Georgetown Half Marathon (Jul. 2023)</li>
                 <li>- DC Half Marathon (Sept. 2023)</li>
                 <li>- Richmond Marathon (Nov. 2023)</li>
               </ul>
@@ -57,7 +59,7 @@
             </p>
             <p><b>Current Gear:</b>
             <ul class = "no-bullets">
-              <li>Shoes: NB FuelCell Rebel V3, Brooks Ghost 14</li>
+              <li>Shoes: Nike Vaporfly Next% 2, NB FuelCell Rebel V3, Brooks Ghost 14</li>
               <li>Watch: Garmin Forerunner 245</li>
             </ul>
             <br>
