Update for job change

--- a/about.html
+++ b/about.html
@@ -39,22 +39,27 @@
               </div>
               <div class="container">
                 <span class ="highlight"><h1>Who Am I</h1></span> <br>
-              <p>👋 Hi I'm David! I'm a Software Engineer creating cool impactful stuff for <span class = "highlight appian"><a href ="https://www.appian.com/">Appian</a></span>.
+              <p>👋 Hi I'm David! I'm a Software Engineer building a sportsbook for <span class = "highlight fanatics"><a href ="https://www.fanaticsinc.com/fanatics-betting-gaming">Fanatics</a></span>.
               </p>
               <br>
-              <p>🎓 I'm a recent graduate from the <span class = "highlight"><a href = "https://www.virginia.edu/">University of Virginia</a></span>, where I studied Computer Science, taught chess, and helped organize TEDx talks.
+              <p>🎓 I'm a graduate from the <span class = "highlight"><a href = "https://www.virginia.edu/">University of Virginia</a></span>, where I studied Computer Science, taught chess, and helped organize TEDx talks.
               </p>
               <br>
-              <p>💼 In the past, I've interned at <span class = "highlight relativity"><a href ="https://www.relativity.com/">Relativity</a></span> and <span class = "highlight alarm"><a href ="https://www.alarm.com/">Alarm.com</a></span>, where I've had opportunities to work with the full stack.</p>
+              <p>💼 In the past, I've worked for companies like 
+                <span class = "highlight appian"><a href="https://www.appian.com/">Appian</a></span>, 
+                <span class = "highlight relativity"><a href ="https://www.relativity.com/">Relativity,</a></span> and 
+                <span class = "highlight alarm"><a href ="https://www.alarm.com/">Alarm.com</a></span>, 
+                where I've had opportunities to learn from people way smarter than me.
+              </p>
               <br>
               <span class ="highlight"><h1>Fun Facts</h1></span> <br>
               <p>⚽ Playing soccer since I was 5. Currently playing co-ed and men's "sunday league" with friends</p>
               <br>
-              <p>🌎 Recent Visits: San Diego, Boston, Chicago, Iceland</p>  
+              <p>🌎 Recent Visits: Paris, Barcelona, San Diego, Chicago, Seattle</p>  
               <br>
-              <p>☕ Addicted to making good coffee and going to coffee shops</p>
+              <p>♟️ Shamefully average chess player and gamer</p>
               <br>
-              <p>📺 Current Watchlist: Peaky Blinders, Barry, Mad Men</p>
+              <p>🏃‍♂️ I love paying for pain! Currently training for Richmond Marathon</p>
               <br>
             </div>
             </section>
