--- a/index.html
+++ b/index.html
@@ -57,8 +57,9 @@
                         <span id="typed"></span>
                         <div id="typed-strings" style="display: none;">
 		                    <p>Hi I'm <span class="highlight blue">David Yoon</span></p>
-		                    <p>Previously @ <span class="highlight pink">UVA</span> </p>
-                            	    <p>Developer @ <span class="highlight appian">Appian</span> </p>
+                            <p>Previously @ <span class="highlight appian">Appian</span></p>
+		                    <p>Currently @ <span class="highlight fanatics">Fanatics</span> </p>
+
 		                </div>
                       </h1>
                     <p class = "fade-in">I'm a dreamer and I love new things.</p>
