Update for job change

--- a/home.html
+++ b/home.html
@@ -42,7 +42,7 @@
                         <div id="typed-strings" style="display: none;">
 		                    <p>Hi I'm <span class="highlight blue">David Yoon</span></p>
                             <p>Previously @ <span class="highlight appian">Appian</span></p>
-		                    <p>Currently @ <span class="highlight fanatics">Fanatics</span> </p>
+		                    <p>Developer @ <span class="highlight fanatics">Fanatics</span> </p>
 		                </div>
                       </h1>
                     <p>I'm a dreamer and I love new things.</p>
