--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                         <div id="typed-strings" style="display: none;">
 		                    <p>Hi I'm <span class="highlight blue">David Yoon</span></p>
                             <p>Previously @ <span class="highlight appian">Appian</span></p>
-		                    <p>Currently @ <span class="highlight fanatics">Fanatics</span> </p>
+		                    <p>Developer @ <span class="highlight fanatics">Fanatics</span> </p>
 
 		                </div>
                       </h1>
