--- a/about.html
+++ b/about.html
@@ -59,7 +59,7 @@
               <br>
               <p>♟️ Shamefully average chess player and gamer</p>
               <br>
-              <p>🏃‍♂️ I love paying for pain! Currently training for Richmond Marathon</p>
+              <p>🏃‍♂️ I love paying for pain! Currently training for San Diego Marathon</p>
               <br>
             </div>
             </section>
