--- a/fitness.html
+++ b/fitness.html
@@ -47,19 +47,20 @@
                   <li>- Georgetown Half Marathon (2022): 1:42:34</li>
                   <li>- Springfield Half Marathon (2023): 1:41:56</li>
                   <li>- OC Marathon (May 2023): 3:48:01</li>
+                  <li>- DC Half Marathon - pacing (Sept. 2023)</li>
+                  <li>- Richmond Marathon - pacing (Nov. 2023)</li>
                 </ul>
               </p>
               <p><b>Upcoming Races:</b>
+                <li>- Brooklyn Half Marathon (April. 2024)</li>
+                <li>- San Diego Marathon (June. 2024)</li>
               <ul class = "no-bullets">
-                <li>- Summer Georgetown Half Marathon (Jul. 2023)</li>
-                <li>- DC Half Marathon (Sept. 2023)</li>
-                <li>- Richmond Marathon (Nov. 2023)</li>
               </ul>
               <br>
             </p>
             <p><b>Current Gear:</b>
             <ul class = "no-bullets">
-              <li>Shoes: Nike Vaporfly Next% 2, NB FuelCell Rebel V3, Brooks Ghost 14</li>
+              <li>Shoes: Nike Vaporfly Next% 2, Saucony Triump 20, NB FuelCell Rebel V3</li>
               <li>Watch: Garmin Forerunner 245</li>
             </ul>
             <br>
