--- a/fitness.html
+++ b/fitness.html
@@ -50,17 +50,17 @@
                   <li>- DC Half Marathon - pacing (Sept. 2023)</li>
                   <li>- Richmond Marathon - pacing (Nov. 2023)</li>
                 </ul>
-              </p>
+              </p>  
               <p><b>Upcoming Races:</b>
+              <ul class = "no-bullets">
                 <li>- Brooklyn Half Marathon (April. 2024)</li>
                 <li>- San Diego Marathon (June. 2024)</li>
-              <ul class = "no-bullets">
               </ul>
               <br>
             </p>
             <p><b>Current Gear:</b>
             <ul class = "no-bullets">
-              <li>Shoes: Nike Vaporfly Next% 2, Saucony Triump 20, NB FuelCell Rebel V3</li>
+              <li>Shoes: Nike Vaporfly Next% 2, Saucony Triump 20,NB FuelCell Rebel V3, Brooks Ghost 14</li>
               <li>Watch: Garmin Forerunner 245</li>
             </ul>
             <br>
